--- a/index.html
+++ b/index.html
@@ -483,6 +483,78 @@ body {
       </div>
     </div>
   </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NASA Images Gallery</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
+            color: #333;
+        }
+        h1 {
+            font-size: 2rem;
+            font-weight: bold;
+            margin-top: 20px;
+            text-align: center;
+        }
+        .caption {
+            text-align: center;
+            margin-top: 10px;
+            font-size: 1rem;
+        }
+        .images-row img {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+        }
+        .image-container {
+            margin-bottom: 15px;
+        }
+    </style>
+</head>
+<body>
+
+<div class="container">
+    <!-- Header -->
+    <h1>More NASA Images</h1>
+
+    <!-- Image Gallery -->
+    <div class="row mt-4">
+        <!-- Left Image -->
+        <div class="col-lg-8 col-md-12 image-container">
+            <img src="https://via.placeholder.com/800x600" alt="Main Image">
+        </div>
+
+        <!-- Right Images -->
+        <div class="col-lg-4 col-md-12">
+            <div class="row">
+                <div class="col-12 image-container">
+                    <img src="https://via.placeholder.com/400x300" alt="Image 1">
+                </div>
+                <div class="col-12 image-container">
+                    <img src="https://via.placeholder.com/400x300" alt="Image 2">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Caption -->
+    <div class="caption">
+        Holidays on the Space Station Gallery<br>
+        <small>25 IMAGES</small>
+    </div>
+</div>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
