--- a/index.html
+++ b/index.html
@@ -571,3 +571,81 @@ body {
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Explore the Universe</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        .hero-section {
+            position: relative;
+            background: url('https://via.placeholder.com/1920x1080') no-repeat center center/cover;
+            height: 100vh; /* Adjust height as needed */
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+        }
+        .hero-content {
+            text-align: center;
+            background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+            padding: 20px;
+            border-radius: 10px;
+        }
+        .hero-title {
+            font-size: 3rem;
+            font-weight: bold;
+        }
+        .hero-text {
+            font-size: 1.2rem;
+            margin: 15px 0;
+        }
+        .hero-link {
+            font-size: 1.2rem;
+            text-decoration: none;
+            color: white;
+            font-weight: bold;
+        }
+        .hero-link:hover {
+            text-decoration: underline;
+        }
+        .btn-signup {
+            margin-top: 15px;
+            font-size: 1.2rem;
+            font-weight: bold;
+            color: white;
+            background-color: #d9534f;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .btn-signup:hover {
+            background-color: #c9302c;
+        }
+    </style>
+</head>
+<body>
+
+<div class="hero-section">
+    <div class="hero-content">
+        <h1 class="hero-title">Explore the Universe from your Inbox</h1>
+        <p class="hero-text">
+            Stay up-to-date on the latest news from NASA—from Earth to the Moon, the Solar System, and beyond.<br>
+            We will never share your email address. <a href="#" class="hero-link">Privacy Policy</a>
+        </p>
+        <button class="btn-signup">Sign Up →</button>
+    </div>
+</div>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
