--- a/index.html
+++ b/index.html
@@ -649,3 +649,77 @@ body {
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Image of the Day</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f8f9fa;
+        }
+        .content-section {
+            margin-top: 20px;
+        }
+        .title {
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+        .image-container img {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+        }
+        .link {
+            font-size: 0.9rem;
+            font-weight: bold;
+            text-decoration: none;
+            color: #d9534f;
+        }
+        .link:hover {
+            text-decoration: underline;
+        }
+        .view-link {
+            margin-top: 10px;
+            display: block;
+            color: #0062cc;
+        }
+    </style>
+</head>
+<body>
+
+<div class="container content-section">
+    <div class="row align-items-center">
+        <!-- Left Text Section -->
+        <div class="col-lg-6 col-md-12">
+            <small class="text-uppercase text-muted">Today</small>
+            <h1 class="title">Image Of The Day</h1>
+            <h4>Astronaut Suni Williams and Astrobee</h4>
+            <p>
+                NASA astronaut and Expedition 72 Commander Suni Williams checks out the Astrobee robotic free-flyer in the Kibo laboratory module outfitted with tentacle-like arms containing gecko-like adhesive pads to demonstrate satellite capture techniques.
+                Development of this robotic technology may increase the life span of satellites and enable the removal of space debris.
+            </p>
+            <a href="#" class="link">Browse Image Archive</a>
+        </div>
+
+        <!-- Right Image Section -->
+        <div class="col-lg-6 col-md-12 image-container">
+            <img src="https://via.placeholder.com/800x600" alt="Astronaut Suni Williams and Astrobee">
+            <a href="#" class="view-link">View image</a>
+        </div>
+    </div>
+</div>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
+
