--- a/index.html
+++ b/index.html
@@ -723,3 +723,90 @@ body {
 </body>
 </html>
 
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Responsive Footer</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- Footer Section -->
+    <footer class="bg-dark text-white py-4">
+        <div class="container">
+            <div class="row">
+                <!-- Main Info Section -->
+                <div class="col-md-4 mb-4">
+                    <img src="nasa-logo.png" alt="NASA Logo" style="width: 100px;">
+                    <h5 class="mt-3">National Aeronautics and Space Administration</h5>
+                    <p>NASA explores the unknown in air and space, innovates for the benefit of humanity, and inspires the world through discovery.</p>
+                    <a href="#" class="btn btn-danger btn-sm">Join Us</a>
+                </div>
+
+                <!-- Links Section -->
+                <div class="col-md-5 mb-4">
+                    <div class="row">
+                        <div class="col-6">
+                            <ul class="list-unstyled">
+                                <li><a href="#" class="text-white text-decoration-none">Home</a></li>
+                                <li><a href="#" class="text-white text-decoration-none">News & Events</a></li>
+                                <li><a href="#" class="text-white text-decoration-none">Multimedia</a></li>
+                                <li><a href="#" class="text-white text-decoration-none">Missions</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-6">
+                            <ul class="list-unstyled">
+                                <li><a href="#" class="text-white text-decoration-none">Earth & Climate</a></li>
+                                <li><a href="#" class="text-white text-decoration-none">The Solar System</a></li>
+                                <li><a href="#" class="text-white text-decoration-none">Science</a></li>
+                                <li><a href="#" class="text-white text-decoration-none">About NASA</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Social Media Section -->
+                <div class="col-md-3">
+                    <h6>Follow NASA</h6>
+                    <div>
+                        <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
+                        <a href="#" class="text-white me-3"><i class="bi bi-twitter"></i></a>
+                        <a href="#" class="text-white me-3"><i class="bi bi-instagram"></i></a>
+                        <a href="#" class="text-white"><i class="bi bi-youtube"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr class="bg-light">
+            <div class="text-center small">
+                <p>Page Last Updated: Dec 04, 2024</p>
+                <p>Page Editor: Dacia Massengill | Responsible NASA Official: Abigail Bowman</p>
+                <p class="text-muted">© 2024 NASA. All Rights Reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
+footer ul {
+    padding: 0;
+}
+
+footer ul li {
+    margin-bottom: 10px;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+footer .social-icons a {
+    font-size: 20px;
+}
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
