--- a/index.html
+++ b/index.html
@@ -1,3 +1,71 @@
+.card-img-top {
+    height: 200px; /* Adjust the height as needed */
+    object-fit: cover; /* Ensures the image fits the container */
+}
+
+.card-title {
+    font-size: 1.1rem;
+    font-weight: bold;
+}
+
+.card-text {
+    font-size: 0.9rem;
+    color: #6c757d;
+}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NASA Image Gallery</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <section class="py-5">
+        <div class="container">
+            <h2 class="mb-4 text-center">More NASA Images</h2>
+            <div class="row g-4">
+                <!-- Gallery Item 1 -->
+                <div class="col-md-4">
+                    <div class="card h-100 border-0">
+                        <img src="space1.jpg" class="card-img-top" alt="Holidays on the Space Station">
+                        <div class="card-body">
+                            <h5 class="card-title">Holidays on the Space Station Gallery</h5>
+                            <p class="card-text">25 IMAGES</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Gallery Item 2 -->
+                <div class="col-md-4">
+                    <div class="card h-100 border-0">
+                        <img src="space2.jpg" class="card-img-top" alt="Astronaut Selfies Gallery">
+                        <div class="card-body">
+                            <h5 class="card-title">Astronaut Selfies Gallery</h5>
+                            <p class="card-text">20 IMAGES</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Gallery Item 3 -->
+                <div class="col-md-4">
+                    <div class="card h-100 border-0">
+                        <img src="space3.jpg" class="card-img-top" alt="IXPE Gallery">
+                        <div class="card-body">
+                            <h5 class="card-title">IXPE Pairs Up with Space Telescopes</h5>
+                            <p class="card-text">15 IMAGES</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
